[package]
name = "chat-req-res"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

axum = { version = "0.8.7", features = ["macros"] }
serde_json = "1.0.145"
